clusters/main/kubernetes/apps/custom-app/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: custom-app
  labels:
    app.kubernetes.io/name: custom-app
