clusters/main/kubernetes/apps/custom-app/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-app
  namespace: custom-app
  labels:
    app.kubernetes.io/name: custom-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: custom-app
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
