clusters/main/kubernetes/apps/custom-app/app/gateway-api-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-app
  namespace: custom-app
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - app.${DOMAIN_0}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: custom-app
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-app-http-redirect
  namespace: custom-app
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: http
  hostnames:
    - app.${DOMAIN_0}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
