clusters/main/kubernetes/apps/custom-app/app/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: custom-app
  namespace: custom-app
  labels:
    app.kubernetes.io/name: custom-app
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: custom-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gateway
      ports:
        - protocol: TCP
          port: 8080
